v1/platform/elasticache/cf-elasticache.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  AppShortName:
    Type: String
    Description: AppShortName

  EnvName:
    Type: String
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-sit1
      - nprd-sit2
      - nprd-uat
      - nprd-pt
      - prod   
    Description: Environment
  
  VpcId:
    Type: String
    Description: VpcId of your existing Virtual Private Cloud (VPC)
  
  VPCSubnetIdappAZ1:
    Type: String
    Description: VPC Subnet id for App AZ1

  VPCSubnetIdappAZ2:
    Type: String
    Description: VPC Subnet id for App AZ2

  VPCSubnetIdappAZ3:
    Type: String
    Description: VPC Subnet id for App AZ3

  VPCSubnetCidrAppAZ1:
    Type: String
    Description: AZ1 App Subnet
  
  VPCSubnetCidrAppAZ2:
    Type: String
    Description: AZ2 App Subnet

  VPCSubnetCidrAppAZ3:
    Type: String
    Description: AZ3 App Subnet

  RedisCacheInstanceType:
    Type: String
    Description: Redis Cache Instance Type

  RedisAuthToken:
    Type: String
    Description: Redis Cluster Authentication Token 

Conditions:
  IsProduction: !Equals
    - !Ref EnvName
    - prod

Resources:
  ElasticacheSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties: 
      CacheSubnetGroupName: !Sub ${AppShortName}-${EnvName}-ecredis-SubnetGroup
      Description: SubnetGroup for ElastiCache Redis Cluster
      SubnetIds: 
        - !Ref VPCSubnetIdappAZ1
        - !Ref VPCSubnetIdappAZ2
        - !If [IsProduction, !Ref VPCSubnetIdappAZ3, !Ref "AWS::NoValue"]

  ElasticacheSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      GroupName: !Sub sg_${AppShortName}-${EnvName}-elasticache
      GroupDescription: Security Group for Elasticache Redis Cluster
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: App Subnet AZ2
        - !If 
            - "IsProduction"
            - IpProtocol: tcp
              FromPort: 6379
              ToPort: 6379
              CidrIp: !Ref VPCSubnetCidrAppAZ3
              Description: App Subnet AZ3
            - !Ref AWS::NoValue

  RedisCluster:
      Type: 'AWS::ElastiCache::ReplicationGroup'
      DeletionPolicy: !If [IsProduction, Retain, Delete]
      UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
      Properties:
        ReplicationGroupId: !Sub ${AppShortName}-${EnvName}-elasticache
        AtRestEncryptionEnabled: true
        AuthToken: !Ref RedisAuthToken
        TransitEncryptionEnabled: true
        AutomaticFailoverEnabled: true
        CacheNodeType: !Ref RedisCacheInstanceType
        CacheParameterGroupName: default.redis7.cluster.on
        MultiAZEnabled: true
        CacheSubnetGroupName: !Ref ElasticacheSubnetGroup
        Engine: redis
        EngineVersion: '7.0'
        NumNodeGroups: '1'
        ReplicasPerNodeGroup: '1'
        Port: 6379
        PreferredMaintenanceWindow: 'sun:05:00-sun:09:00'
        ReplicationGroupDescription: Elasti Cache Redis Cluster
        SecurityGroupIds:
          - !GetAtt ElasticacheSecurityGroup.GroupId
        SnapshotRetentionLimit: 5
        SnapshotWindow: '10:00-12:00'

Outputs:
  RedisCluster:
    Description: A reference to the created RedisCluster
    Value: !GetAtt RedisCluster.ConfigurationEndPoint.Address
